--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
+    "@next/font": "^14.2.13",
     "next": "14.2.11",
     "pg": "^8.12.0",
     "react": "^18",
@@ -20,6 +22,7 @@
     "@types/pg": "^8.11.9",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "daisyui": "^4.12.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.11",
     "postcss": "^8",
