--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "pg": "^8.12.0",
     "react": "^18",
     "react-dom": "^18",
-    "searchmantic_hadist": "file:"
+    "searchmantic_hadist": "file:",
+    "sweetalert2": "^11.14.5"
   },
   "devDependencies": {
     "@types/node": "^20",
