--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@next/font": "^14.2.13",
-    "next": "14.2.11",
+    "next": "^14.2.11",
     "pg": "^8.12.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "searchmantic_hadist": "file:"
   },
   "devDependencies": {
