--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "pg": "^8.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "searchmantic_hadist": "file:"
+    "searchmantic_hadist": "file:",
     "sweetalert2": "^11.14.5"
   },
   "devDependencies": {
